objects/zkfedex__Package__c.object
<CustomObject>
    <customHelpPage>zkfedex__packageHelp</customHelpPage>
    <description>Package is a container of goods or products.</description>
    <fields>
        <fullName>zkfedex__AdmissibilityPackageTypeName__c</fullName>
        <label>Admissibility Package Type Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__AdmissibilityPackageType__c</fullName>
        <description>BAG Bag
BBL Barrel
BSK Basket or hamper
BOX Box
BXT Bucket
BDL Bundle
CAG Cage
CTN Carton
CAS Case
CHS Chest
CNT Container
CRT Crate
CYL Cylinder
DRM Drum
ENV Envelope
PKG Package
PAL Pail
PLT Pallet
PCL Parcel
PCS Pieces
REL Reel
ROL Roll
SAK Sack
SHW Shrink Wrapped
SKD Skid
TNK Tank
TBN Tote Bin
TBE Tube
UNT Unit
BOX Other Packaging</description>
        <label>Admissibility Package Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__AllowRecordDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Record Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__BasedOnPackageProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Package Profile that was used to create this package</description>
        <inlineHelpText>The Package Profile that was used to create this package</inlineHelpText>
        <label>Based on Package Profile</label>
        <referenceTo>zkfedex__Package__c</referenceTo>
        <relationshipName>Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkfedex__DeclaredValueCurrency__c</fullName>
        <label>Declared/Carriage Value Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__DeclaredValue__c</fullName>
        <label>Declared/Carriage Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkfedex__DimensionUnits__c</fullName>
        <description>The units of measurement for the length, width, and height</description>
        <inlineHelpText>The units of measurement for the length, width, and height</inlineHelpText>
        <label>Dimension Units</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__Height__c</fullName>
        <description>The Height of the package, measured in the units specified by the &quot;dimension units&quot; field

Field not necessary if using one of the following Packaging Types:
FedEx 10KG Box
FedEx 25KG Box
FedEx Box
FedEx Envelope
FedEx Pak
FedEx Tube</description>
        <inlineHelpText>The Height of the package, measured in the units specified by the &quot;dimension units&quot; field

Field not necessary if using one of the following Packaging Types:
FedEx 10KG Box
FedEx 25KG Box
FedEx Box
FedEx Envelope
FedEx Pak
FedEx Tube</inlineHelpText>
        <label>Height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkfedex__IsFreight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true if this instance describes a skid of a freight shipment</description>
        <inlineHelpText>Set to true if this instance describes a skid of a freight shipment</inlineHelpText>
        <label>Is a Freight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__Length__c</fullName>
        <description>The Length of the package, measured in the units specified by the &quot;dimension units&quot; field

Field not necessary if using one of the following Packaging Types:
FedEx 10KG Box
FedEx 25KG Box
FedEx Box
FedEx Envelope
FedEx Pak
FedEx Tube</description>
        <inlineHelpText>The Length of the package, measured in the units specified by the &quot;dimension units&quot; field

Field not necessary if using one of the following Packaging Types:
FedEx 10KG Box
FedEx 25KG Box
FedEx Box
FedEx Envelope
FedEx Pak
FedEx Tube</inlineHelpText>
        <label>Length</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkfedex__ModKey__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__PackageProfileDescription__c</fullName>
        <description>The description used to identify this Package Profile. Package Profiles are generic records that are used by Shipmate for Package &apos;Re-Use&apos;</description>
        <inlineHelpText>The description used to identify this Package Profile. Package Profiles are generic records that are used by Shipmate for Package &apos;Re-Use&apos;</inlineHelpText>
        <label>Package Profile Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__PackageProfile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this record represents a Package Profile. Package Profiles are generic records that are used by Shipmate for Package &apos;Re-Use&apos;</description>
        <inlineHelpText>Indicates whether this record represents a Package Profile. Package Profiles are generic records that are used by Shipmate for Package &apos;Re-Use&apos;</inlineHelpText>
        <label>Package Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__PackagingTypeName__c</fullName>
        <label>Packaging Type Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__PackagingType__c</fullName>
        <label>Packaging Type</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__SsCodAmountCurrency__c</fullName>
        <label>COD Collection Amount Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__SsCodAmount__c</fullName>
        <label>COD Collection Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkfedex__SsNonStandardPackaging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Standard Packaging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__TotalPiecesOnSkid__c</fullName>
        <description>For a freight shipment, this is the number of packages on a single skid</description>
        <inlineHelpText>For a freight shipment, this is the number of packages on a single skid</inlineHelpText>
        <label>Total Pieces On Skid</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkfedex__WeightUnits__c</fullName>
        <description>The units of measurement for the weight</description>
        <inlineHelpText>The units of measurement for the weight</inlineHelpText>
        <label>Weight Units</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__Weight__c</fullName>
        <description>The Weight of the package, measured in the units specified by the &quot;weight units&quot; field</description>
        <inlineHelpText>The Weight of the package, measured in the units specified by the &quot;weight units&quot; field</inlineHelpText>
        <label>Weight</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkfedex__Width__c</fullName>
        <description>The Width of the package, measured in the units specified by the &quot;dimension units&quot; field

Field not necessary if using one of the following Packaging Types:
FedEx 10KG Box
FedEx 25KG Box
FedEx Box
FedEx Envelope
FedEx Pak
FedEx Tube</description>
        <inlineHelpText>The Width of the package, measured in the units specified by the &quot;dimension units&quot; field

Field not necessary if using one of the following Packaging Types:
FedEx 10KG Box
FedEx 25KG Box
FedEx Box
FedEx Envelope
FedEx Pak
FedEx Tube</inlineHelpText>
        <label>Width</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FedEx Package</label>
    <listViews>
        <fullName>Nolan_Daigle_Package</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>zkfedex__All_Package_Profiles</fullName>
        <columns>NAME</columns>
        <columns>zkfedex__PackageProfileDescription__c</columns>
        <columns>zkfedex__PackagingTypeName__c</columns>
        <columns>zkfedex__Weight__c</columns>
        <columns>zkfedex__WeightUnits__c</columns>
        <columns>zkfedex__Length__c</columns>
        <columns>zkfedex__Width__c</columns>
        <columns>zkfedex__Height__c</columns>
        <columns>zkfedex__DimensionUnits__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zkfedex__PackageProfile__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Package Profiles</label>
    </listViews>
    <nameField>
        <displayFormat>Package-{0000000000}</displayFormat>
        <label>Package Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>